Fix Site branding responsive squishing
apply flex: 1 0 auto to child elements of site-branding

--- a/wp-content/themes/mw_theme/sass/site/header/_header.scss
+++ b/wp-content/themes/mw_theme/sass/site/header/_header.scss
@@ -75,6 +75,10 @@
 		width: 35%;
 		flex: 1 0 auto;
 	}
+        .site-branding .custom-logo-link,
+        .site-branding .site-branding__text {
+            flex:1 0 auto;
+        }
 	
 	.site-navigation {
 		width: 55%;
